--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,11 @@
 p { text-align: center; }
 
 html { height: 100% }
-body { height: 98% }
-.main { width: 80%; margin: auto; height: 98%; overflow: hidden; }
+body { height: 100%; }
+.main { width: 80%; margin: auto; height: 100%; }
 
 img { max-width: 100%; max-height: 90%; display: block; margin: auto; }
 
 
-.imgNav { text-align: center; margin: 5px; }
-.imgNav * { margin: 5px; }
+.imgNav { text-align: center; margin: 5px; margin-bottom: 20px; }
+.imgNav * { margin: 5px; font-size: 1.5em; }
